[workspace]
members = ["packages/lexer", "packages/lexer_derive", "packages/parser"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Eduardo Campaña <hi@orballo.dev>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
rowan = "0.15.15"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
insta = { version = "1.39.0", features = ["yaml", "glob"] }
logos = "0.14.0"
nom = "7.1.3"
syn = { version = "2.0.72", features = ["extra-traits"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
